# psychopy-EEG-ET-template

./: .gitignore  README.md  pyproject.toml
src/exp1/: __init__.py  _paths.py  data_io.py  main.py  screens.py  settings.py  stimuli.py  trial.py  trial_queue.py
src/experiment_1/: __init__.py  data_io.py  io.py  main.py  screens.py  settings.py  stimuli.py  trial.py
src/utils/: __init__.py  color_utils.py  condition_assignment.py  eyelink_display.py  eyelinker.py  positions.py
templates/: __init__.py  tracker_template.py
utils/: __init__.py
